--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@reach/router": "^1.2.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "formik": "^2.0.8",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-formik-ui": "^4.0.5"
   },
   "version": "0.1.0",
   "devDependencies": {
