--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
-    "react-formik-ui": "^4.0.5"
+    "react-formik-ui": "^4.0.5",
+    "react-semantic-ui-datepickers": "^2.2.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "version": "0.1.0",
   "devDependencies": {
